fixing some problem

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     background-color: #f0f2f5;
+    overflow: hidden;
 }
 .flogin-page{
     padding: 50px;
